[tool.poetry]
name = "aide"
version = "0.1.0"
description = ""
authors = ["Ilya Breitburg <ilya.breytburg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
litellm = "^1.15.1"
langchain = "^0.0.351"

[tool.poetry.scripts]
llmgraph = 'aide.console:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
